syntax = "proto3";

option java_package = "smr.shop.libs.grpc.product.stock";
option java_multiple_files = true;

message ProductStockWithProductIdGrpcRequest {
  int64 productId = 1;
}
message ProductStockWithIdGrpcRequest {
  string stockId = 1;
}

message ProductStockGrpcResponse {
  int64 id = 1;
  string attributeName = 2;
  int32 quantity = 3;

}

service ProductStockService {
  rpc getProductStockWithProductId(ProductStockWithProductIdGrpcRequest) returns  (stream ProductStockGrpcResponse);
  rpc getProductStockId(ProductStockWithIdGrpcRequest) returns  (ProductStockGrpcResponse);
}